RESOLVED FIXED 203104
GPUCanvasContext should not prevent entering the back/forward cache
https://bugs.webkit.org/show_bug.cgi?id=203104
Summary GPUCanvasContext should not prevent entering the back/forward cache
Chris Dumez
Reported 2019-10-17 09:57:08 PDT
GPUCanvasContext should not prevent entering the back/forward cache.
Attachments
Patch (4.99 KB, patch)
2019-10-30 10:06 PDT, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2019-10-30 10:02:19 PDT
Chris Dumez
Comment 2 2019-10-30 10:06:01 PDT
WebKit Commit Bot
Comment 3 2019-10-30 16:29:29 PDT
Comment on attachment 382326 [details] Patch Clearing flags on attachment: 382326 Committed r251820: <https://trac.webkit.org/changeset/251820>
WebKit Commit Bot
Comment 4 2019-10-30 16:29:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.