GPUCanvasContext should not prevent entering the back/forward cache https://bugs.webkit.org/show_bug.cgi?id=203104 <rdar://problem/56748066>

Reviewed by Tim Horton.

Source/WebCore:

Let pages with a GPUCanvasContext into the back/forward cache. The current implementation
does not run any script.

Test: fast/history/page-cache-gpu-canvas-context.html

* Modules/webgpu/GPUCanvasContext.h:

LayoutTests:

Add layout test coverage.

* fast/history/page-cache-gpu-canvas-context-expected.txt: Added.
* fast/history/page-cache-gpu-canvas-context.html: Added.


Canonical link: https://commits.webkit.org/217013@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251820 268f45cc-cd09-0410-ab3c-d52691b4dbfc